# CustomerChurnKaggle

custchurn/: .env  customer_churn.ipynb  main.py  pyproject.toml  submission.csv
